Source/WebCore/plugins/PluginData.cpp
@@ -46,10 +46,19 @@ Vector<PluginInfo> PluginData::webVisiblePlugins() const
 
 void PluginData::getWebVisibleMimesAndPluginIndices(Vector<MimeClassInfo>& mimes, Vector<size_t>& mimePluginIndices) const
 {
+    getMimesAndPluginIndiciesForPlugins(webVisiblePlugins(), mimes, mimePluginIndices);
+}
+
+void PluginData::getMimesAndPluginIndices(Vector<MimeClassInfo>& mimes, Vector<size_t>& mimePluginIndices) const
+{
+    getMimesAndPluginIndiciesForPlugins(plugins(), mimes, mimePluginIndices);
+}
+
+void PluginData::getMimesAndPluginIndiciesForPlugins(const Vector<PluginInfo>& plugins, Vector<MimeClassInfo>& mimes, Vector<size_t>& mimePluginIndices) const
+{
     ASSERT_ARG(mimes, mimes.isEmpty());
     ASSERT_ARG(mimePluginIndices, mimePluginIndices.isEmpty());
 
-    const Vector<PluginInfo>& plugins = webVisiblePlugins();
     for (unsigned i = 0; i < plugins.size(); ++i) {
         const PluginInfo& plugin = plugins[i];
         for (auto& mime : plugin.mimes) {
@@ -106,6 +115,20 @@ String PluginData::pluginFileForWebVisibleMimeType(const String& mimeType) const
     if (getPluginInfoForWebVisibleMimeType(mimeType, info))
         return info.file;
     return String();
+}
+
+bool PluginData::supportsMimeType(const String& mimeType, const AllowedPluginTypes allowedPluginTypes) const
+{
+    Vector<MimeClassInfo> mimes;
+    Vector<size_t> mimePluginIndices;
+    const Vector<PluginInfo>& plugins = this->plugins();
+    getMimesAndPluginIndices(mimes, mimePluginIndices);
+
+    for (unsigned i = 0; i < mimes.size(); ++i) {
+        if (mimes[i].type == mimeType && (allowedPluginTypes == AllPlugins || plugins[mimePluginIndices[i]].isApplicationPlugin))
+            return true;
+    }
+    return false;
 }
 
 void PluginData::refresh()
